kubernetes/apps/default/hello-world/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-world
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "hello-world.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-world
          port: 80
          weight: 1
